--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: djikstra
-      run: make graphs/djikstra && ./graphs/djikstra
+      run: make graphs/djiktra && ./graphs/djiktra
     
